--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -5,35 +5,36 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 border border-dark rounded-lg shadow-lg bg-white">
-            <!-- Register Form -->
-            <form class="p-5" action="register" method="POST">
-                {% csrf_token %}
-                <p class="text-center h4 mb-4">Register</p>
-                <hr/>
-                <div class="mt-5 form-group row">
-                    <label for="email" class="col-4 col-form-label">UT Mail</label>
-                    <div class="col-8">
-                        {{ form.mail }}
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 border border-dark rounded-lg shadow-lg bg-white">
+                <!-- Register Form -->
+                <form class="p-5" action="register" method="POST">
+                    {% csrf_token %}
+                    <p class="text-center h4 mb-4">Register</p>
+                    <hr/>
+                    <div class="mt-5 form-group row">
+                        <label for="email" class="col-4 col-form-label">UT Mail</label>
+                        <div class="col-8">
+                            {{ form.mail }}
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label for="password" class="col-4 col-form-label">Password</label>
-                    <div class="col-8">
-                        {{ form.password }}
+                    <div class="form-group row">
+                        <label for="password" class="col-4 col-form-label">Password</label>
+                        <div class="col-8">
+                            {{ form.password }}
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label for="passwordConfirm" class="col-4 col-form-label">Confirm Password</label>
-                    <div class="col-8">
-                        {{ form.passwordConfirm }}
+                    <div class="form-group row">
+                        <label for="passwordConfirm" class="col-4 col-form-label">Confirm Password</label>
+                        <div class="col-8">
+                            {{ form.passwordConfirm }}
+                        </div>
                     </div>
-                </div>
-                <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" type="submit">Register</button>
-            </form>
+                    <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" type="submit">Register
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
