--- a/designapp1/templates/request_db.html
+++ b/designapp1/templates/request_db.html
@@ -5,106 +5,113 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 border border-dark rounded-lg shadow-lg bg-white">
-                    <!-- Register Form -->
-                    <form class="p-5" action="register" method="POST">
-                        <p class="text-center h4 mb-4">Register</p>
-                        <hr/>
-                        <div class="mt-5 form-group row">
-                            <label for="selectCourse" class="col-4 col-form-label">Select Course</label>
-                            <div class="col-8">
-                                <select class="form-control" id="selectCourse">
-                                    <option selected>Choose a course...</option>
-                                    <!-- Provided by back-end -->
-                                    <option value="Pearls">Pearls of Computer Science</option>
-                                    <option value="DataInformation">Data & Information</option>
-                                    <option value="DataScience">Data Science</option>
-                                </select>
-                            </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 border border-dark rounded-lg shadow-lg bg-white">
+                <!-- Register Form -->
+                <form class="p-5" action="register" method="POST">
+                    <p class="text-center h4 mb-4">Register</p>
+                    <hr/>
+                    <div class="mt-5 form-group row">
+                        <label for="selectCourse" class="col-4 col-form-label">Select Course</label>
+                        <div class="col-8">
+                            <select class="form-control" id="selectCourse">
+                                <option selected>Choose a course...</option>
+                                <!-- Provided by back-end -->
+                                <option value="Pearls">Pearls of Computer Science</option>
+                                <option value="DataInformation">Data & Information</option>
+                                <option value="DataScience">Data Science</option>
+                            </select>
                         </div>
-                        <div class="form-group row">
-                            <label for="groupNo" class="col-9 col-form-label">Canvas Group Number</label>
-                            <div class="col-3">
-                                <select class="form-control" id="selectGroupNo">
-                                    <option selected>-</option>
-                                    <!-- Provided by back-end -->
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                </select>
-                            </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="groupNo" class="col-9 col-form-label">Canvas Group Number</label>
+                        <div class="col-3">
+                            <select class="form-control" id="selectGroupNo">
+                                <option selected>-</option>
+                                <!-- Provided by back-end -->
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                            </select>
                         </div>
-                        <div class="form-group row border mt-1 mb-4 rounded-lg">
-                            <p class="col-12 text-center my-3">Student 1</p>
-                            <label for="firstName lastName" class="col-2 col-form-label mb-3">Names</label>
-                            <div class="col-5">
-                                <input type="text" class="form-control" placeholder="First" id="firstName">
-                            </div>
-                            <div class="col-5">
-                                <input type="text" class="form-control" placeholder="Last" id="lastName">
-                            </div>
-                            <label for="sNumber" class="col-5 col-form-label mb-3">Student Number</label>
-                            <div class="col-7">
-                                <input type="text" class="form-control" placeholder="s1234567" id="sNumber">
-                            </div>
-                            <label for="email" class="col-3 col-form-label mb-3">UT Mail</label>
-                            <div class="col-9">
-                                <input type="text" class="form-control" placeholder="your.name@student.utwente.nl" id="email">
-                            </div>
+                    </div>
+                    <div class="form-group row border mt-1 mb-4 rounded-lg">
+                        <p class="col-12 text-center my-3">Student 1</p>
+                        <label for="firstName lastName" class="col-2 col-form-label mb-3">Names</label>
+                        <div class="col-5">
+                            <input type="text" class="form-control" placeholder="First" id="firstName">
                         </div>
-
-                        <!-- Script for adding/removing students -->
-                        <!-- <script type="text/text/javascript">
-                            function addStudent() {
-			                    var node = document.createElement("p");
-			                    var inner = "test";
-			                    node.innerHTML = inner;
-			                    list = document.getElementById("student");
-			                    list.appendChild(node);
-		                    }
-                        </script> -->
-
-                        <!-- <div class="form-group row border mt-1 mb-3 rounded-lg">
-                            <p class="col-12 text-center my-3">Student 2</p>
-                            <label for="firstName lastName" class="col-2 col-form-label mb-3">Names</label>
-                            <div class="col-5">
-                                <input type="text" class="form-control" placeholder="First" id="firstName">
-                            </div>
-                            <div class="col-5">
-                                <input type="text" class="form-control" placeholder="Last" id="lastName">
-                            </div>
-                            <label for="sNumber" class="col-5 col-form-label mb-3">Student Number</label>
-                            <div class="col-7">
-                                <input type="text" class="form-control" placeholder="s1234567" id="sNumber">
-                            </div>
-                            <label for="email" class="col-3 col-form-label mb-3">UT Mail</label>
-                            <div class="col-9">
-                                <input type="text" class="form-control" placeholder="your.name@student.utwente.nl" id="email">
-                            </div>
-                        </div> -->
-
-                        <div class="col-2 offset-5 btn-group-vertical" role="group">
-                            <button class="btn btn-danger" type="button" onclick="deleteStudent()">-</button>
-                            <button class="btn btn-success" type="button" onclick="addStudent()">+</button>
+                        <div class="col-5">
+                            <input type="text" class="form-control" placeholder="Last" id="lastName">
                         </div>
+                        <label for="sNumber" class="col-5 col-form-label mb-3">Student Number</label>
+                        <div class="col-7">
+                            <input type="text" class="form-control" placeholder="s1234567" id="sNumber">
+                        </div>
+                        <label for="email" class="col-3 col-form-label mb-3">UT Mail</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" placeholder="your.name@student.utwente.nl"
+                                   id="email">
+                        </div>
+                    </div>
 
-                        <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" type="submit">Done!</button>
-                    </form>
+                    <!-- Script for adding/removing students -->
+                    <!-- <script type="text/text/javascript">
+                        function addStudent() {
+                            var node = document.createElement("p");
+                            var inner = "test";
+                            node.innerHTML = inner;
+                            list = document.getElementById("student");
+                            list.appendChild(node);
+                        }
+                    </script> -->
+
+                    <!-- <div class="form-group row border mt-1 mb-3 rounded-lg">
+                        <p class="col-12 text-center my-3">Student 2</p>
+                        <label for="firstName lastName" class="col-2 col-form-label mb-3">Names</label>
+                        <div class="col-5">
+                            <input type="text" class="form-control" placeholder="First" id="firstName">
+                        </div>
+                        <div class="col-5">
+                            <input type="text" class="form-control" placeholder="Last" id="lastName">
+                        </div>
+                        <label for="sNumber" class="col-5 col-form-label mb-3">Student Number</label>
+                        <div class="col-7">
+                            <input type="text" class="form-control" placeholder="s1234567" id="sNumber">
+                        </div>
+                        <label for="email" class="col-3 col-form-label mb-3">UT Mail</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" placeholder="your.name@student.utwente.nl" id="email">
+                        </div>
+                    </div> -->
+
+                    <div class="col-2 offset-5 btn-group-vertical" role="group">
+                        <button class="btn btn-danger" type="button" onclick="deleteStudent()">-</button>
+                        <button class="btn btn-success" type="button" onclick="addStudent()">+</button>
+                    </div>
+
+                    <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" type="submit">Done!</button>
+                </form>
 
 
-                </div>
             </div>
         </div>
+    </div>
 
-        <!-- JavaScript -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 {% endblock content %}
