now nicely use DOM instead of pasting raw HTML. start displaying database credentials

--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -45,6 +45,8 @@
                     <button class="btn btn-info my-4" id="credentials-button">Get credentials</button>
 
                 </div>
+                {#  end of form#}
+                <div id="result-div"></div>
             </div>
         </div>
     </div>
