added cookie warning to login page; re-added one of the templates for future reference; working on a warning for the courses page

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -1,9 +1,13 @@
 @import styleguide
 @import "~bootstrap/scss/bootstrap"
 @import "~bootstrap-select/sass/bootstrap-select"
+@import "~bootstrap-cookie-alert/cookiealert.css"
 
 body
   font-family: 'Barlow Semi Condensed3', sans-serif
+
+a
+  color: $cyan
 
 .room-name2
   text-align: right
