admin home api calls work

--- a/designapp1/templates/home.html
+++ b/designapp1/templates/home.html
@@ -33,7 +33,6 @@
         <div class="row mt-4">
             <div class="col-4">
                 <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
-                    <div></div>
                     <!-- <a class="nav-link active" data-toggle="pill" href="#pearls">Pearls of Computer Science</a>
                     <a class="nav-link" data-toggle="pill" href="#di">Data & Information</a>
                     <a class="nav-link" data-toggle="pill" href="#ds">Data Science</a>
@@ -42,7 +41,6 @@
             </div>
             <div class="col-8">
                 <div class="tab-content" id="courses-content">
-                    <div></div>
                 </div>
             </div>
         </div>
@@ -73,11 +71,8 @@
                             <th class="th-sm" scope="col">Verified</th>
                         </tr>
                         </thead>
-                        <tbody>
-                            <div id="users">
-                                <div></div>
-                            </div>
-                        <!-- {% for student in students %}
+                        <tbody id="users">
+                            <!-- {% for student in students %}
                             <tr>
                                 <td scope="row">1</td>
                                 <td>{{ student }}</td>
