--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -2,6 +2,8 @@
 @import "~bootstrap/scss/bootstrap"
 @import "~bootstrap-select/sass/bootstrap-select"
 
+// -webkit-appearance: none
+
 body
   font-family: 'Barlow Semi Condensed3', sans-serif
 
@@ -11,5 +13,4 @@ body
 
 .bootstrap-select .dropdown-item.active, .dropdown-item:active
   background-color: $cyan
-//border-color: #17a2b8
-
+// border-color: #17a2b8
