--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -45,13 +45,8 @@
                     <button class="btn btn-info my-4" id="credentials-button">Get credentials</button>
 
                     <div id="result-div"></div>
+                    <div id="error-div"></div>
 
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
 
                 </div>
                 {#  end of form#}
