--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -32,7 +32,7 @@
     </div>
 
 
-    <div class="text-center cookiealert" role="alert">
+    <div class="text-center cookiealert alert" role="alert">
     We use cookies to ensure you get the best experience on our website. <a href="https://cookiesandyou.com/" target="_blank">Learn more</a>
 
         <button type="button" class="btn btn-info btn-sm acceptcookies" aria-label="Close">
