--- a/designapp1/templates/base.html
+++ b/designapp1/templates/base.html
@@ -6,8 +6,10 @@
     {% block head %}
         <title>Database environment manager</title>
     {% endblock %}
-    {% block scripts %}
+    {% block stylesheets %}
         <link rel="stylesheet" href="/static/css/main.css">
+    {% endblock %}
+    {% block scripts %}
         <script defer src="/static/scripts/main.js"></script>
     {% endblock %}
 </head>
