--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -9,37 +9,41 @@
 {% endblock %}
 
 {% block content %}
-    <div class="mt-5 col-10 col-md 6 col-lg-4 center-block
-    container border border-dark rounded-lg shadow-lg bg-white">
-        <!-- Register Form -->
-        <div class="p-5">
-            <p class="text-center h4 mb-4">Register</p>
-            <hr/>
-            <div class="mt-5 form-group row">
-                <label for="email" class="col-md-4 col-form-label center-block">UT Mail</label>
-                <div class="col-8">
-                    {{ form.mail }}
-                    <div class="invalid-feedback"></div>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="align-items-center col-10
+             mt-5 border border-dark rounded-lg shadow-lg bg-white">
+                <!-- Register Form -->
+                <div class="p-5">
+                    <p class="text-center h4 mb-4">Register</p>
+                    <hr/>
+                    <div class="mt-5 form-group row">
+                        <label for="email" class="col-md-4 col-form-label center-block">UT Mail</label>
+                        <div class="col-8">
+                            {{ form.mail }}
+                            <div class="invalid-feedback"></div>
+                        </div>
 
-            </div>
-            <div class="form-group row">
-                <label for="password" class="col-4 col-form-label">Password</label>
-                <div class="col-8">
-                    {{ form.password }}
-                    <div class="invalid-feedback"></div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="password" class="col-4 col-form-label">Password</label>
+                        <div class="col-8">
+                            {{ form.password }}
+                            <div class="invalid-feedback"></div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="passwordConfirm" class="col-4 col-form-label">Confirm Password</label>
+                        <div class="col-8">
+                            {{ form.passwordConfirm }}
+                            <div class="invalid-feedback"></div>
+                        </div>
+                    </div>
+                    <div class="font-weight-light row text-center h4"> yeet</div>
+                    <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="register-button">Register
+                    </button>
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="passwordConfirm" class="col-4 col-form-label">Confirm Password</label>
-                <div class="col-8">
-                    {{ form.passwordConfirm }}
-                    <div class="invalid-feedback"></div>
-                </div>
-            </div>
-{#            <div class="font-weight-light row text-center h4"> yeet</div>#}
-            <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="register-button">Register
-            </button>
         </div>
     </div>
 {% endblock %}
