--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -6,26 +6,12 @@
 
 {% block scripts %}
     <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/admin.css">
     <script defer src="/static/scripts/admin.js"></script>
 {% endblock %}
 
 {% block content %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">DBM</a>
-            <ul class="navbar-nav mr-auto text-white">
-                <div id="whoamiWelcome">
-                </div>
-            </ul>
-            <div class="my-2 my-lg-0" id="whoamiButton">
 
-            </div>
-            <div class="my-2 my-lg-0">
-                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Log out</button>
-            </div>
-        </div>
-    </nav>
+    {% include 'navbar.html' %}
 
     <div class="container bg-light p-4">
         <!-- Website title -->
