register page now has working password check; added temp alerts;

--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -44,7 +44,7 @@
                     <button class="btn btn-info my-4" id="credentials-button">Get credentials</button>
 
                     <div id="result-div"></div>
-                    <div id="error-div"></div>
+                    <div id="alert-div"></div>
 
 
                 </div>
