--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -9,10 +9,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid py-5">
         <div class="row">
-            <div class="mt-5 col-10 col-md-7 col-xl-4 center-block
-    container border border-dark rounded-lg shadow-lg bg-white mb-5">
+            <div class="col-10 col-md-7 col-xl-4 center-block
+    container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Register Form -->
                 <div class="p-5 form-horizontal"> {# actual content #}
                     <p class="text-center h4 mb-4">Register</p>
@@ -39,10 +39,11 @@
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
-                    <p class="text-center small mb-2">Please use a password of at least 8 characters etc</p>
+                    <p class="text-center small mb-2">Please use a password that has 8 characters or more, and contains at least one lowercase letter, one uppercase letter, and one number</p>
                     <hr>
                     <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="register-button">Register
                     </button>
+                    <div class="row align-items-center mt-5 center-block" id="alert-div"></div>
                 </div>
             </div>
         </div>
