brought denys' styling in line with my own

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -1,4 +1,4 @@
-@import styleguide
+//@import styleguide
 @import "~bootstrap/scss/bootstrap"
 @import "~bootstrap-select/sass/bootstrap-select"
 @import "~bootstrap-cookie-alert/cookiealert.css"
@@ -14,6 +14,6 @@ body
 a
   color: $cyan
 
-.bootstrap-select .dropdown-item.active, .dropdown-item:active
-  background-color: $cyan
+.bootstrap-select .dropdown-item.active, .dropdown-item:active, .nav-link.active
+  background-color: $cyan !important
 // border-color: #17a2b8
