--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -71,7 +71,7 @@
                 </div>
                 <!-- Apply filters -->
                 <div class="text-center">
-                    <button class="btn btn-primary" type="submit">Apply Filters</button>
+                    <button class="btn btn-info" type="submit">Apply Filters</button>
                 </div>
             </div>
             <div class="col-8">
