--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+    {% include 'navbar.html' %}
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-10 offset-lg-1  border border-dark rounded-lg shadow-lg bg-white">
@@ -43,7 +44,6 @@
 
                     <button class="btn btn-info my-4" id="credentials-button">Get credentials</button>
 
-                    <div id="result-div"></div>
                     <div id="alert-div"></div>
 
 
