--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Login Form -->
-                <form class="text-center p-5" action="login" method="POST">
+                <form class="text-center p-5" action="" method="POST">
                     {% csrf_token %}
                     <p class="h4 mb-4">Sign in</p>
                     {{ form }}
@@ -23,7 +23,7 @@
                     <!-- Forgot Password -->
                     <a href="missing">Forgot password?</a>
                     <!-- Sign in button -->
-                    <button class="btn btn-info btn-block my-4" type="submit" onclick="f()">Sign in</button>
+                    <button class="btn btn-info btn-block my-4" type="submit">Sign in</button>
                     <!-- Register -->
                     No account? <a href="register">Register here</a>
                 </form>
