--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -9,7 +9,7 @@
 
         </div>
         <div class="my-2 my-lg-0">
-            <form action='logout' method='POST'><button class="btn btn-outline-secondary my-2 my-sm-0" type='submit' value='logout'>Log out</button></form>
+            <form action='/logout' method='POST'><button class="btn btn-outline-secondary my-2 my-sm-0" type='submit' value='logout'>Log out</button></form>
         </div>
     </div>
 </nav>
