made styling similar accross login, courses and register

--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -10,9 +10,10 @@
 
 {% block content %}
     {% include 'navbar.html' %}
-    <div class="container mt-5">
+    <div class="container-fluid py-3 py-md-5">
         <div class="row">
-            <div class="col-lg-10 offset-lg-1  border border-dark rounded-lg shadow-lg bg-white">
+            <div class="col-11 col-md-7 col-xl-4 center-block
+    container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Login Form -->
                 <div class="text-center p-5">
                     {#                    {% csrf_token %}#}
