--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-3 py-md-5">
         <div class="row">
-            <div class="col-10 col-md-7 col-xl-4 center-block
+            <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Register Form -->
                 <div class="p-5 form-horizontal"> {# actual content #}
