--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -12,7 +12,7 @@
     {% include 'navbar.html' %}
     <div class="container-fluid py-3 py-md-5">
         <div class="row">
-            <div class="col-11 col-md-7 col-xl-4 center-block
+            <div class="col-11 col-md-7 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Login Form -->
                 <div class="text-center p-5">
