fixed alert styling and logout button styling

--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -8,8 +8,8 @@
         <div class="my-2 my-lg-0" id="whoamiButton">
 
         </div>
-        <div class="my-2 my-lg-0">
-            <form action='/logout' method='POST'><button class="btn btn-outline-secondary my-2 my-sm-0" type='submit' value='logout'>Log out</button></form>
+        <div class="my-2 mx-2 my-lg-0">
+            <form action='/logout' method='POST'><button class="btn btn-secondary my-2 my-sm-0" type='submit' value='logout'>Log out</button></form>
         </div>
     </div>
 </nav>
