Fixed alert spacing on register page

--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -43,7 +43,7 @@
                     <hr>
                     <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="register-button">Register
                     </button>
-                    <div class="row align-items-center mt-5 center-block" id="alert-div"></div>
+                    <div class="mt-5 align-items-center center-block " id="alert-div"></div>
                 </div>
             </div>
         </div>
