--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -14,7 +14,8 @@
             <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Register Form -->
-                <div class="p-5 form-horizontal"> {# actual content #}
+                <p class="text-left small mt-2 mb-0"><a href="/login">Back to login page</a></p>
+                <div class="p-5 form-horizontal" id="content"> {# actual content #}
                     <p class="text-center h4 mb-4">Register</p>
                     <hr/>
                     <div class="mt-5 form-group row align-items-center">
@@ -39,7 +40,8 @@
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
-                    <p class="text-center small mb-2">Please use a password that has 8 characters or more, and contains at least one lowercase letter, one uppercase letter, and one number</p>
+                    <p class="text-center small mb-2">Please use a password that has 8 characters or more, and contains
+                        at least one lowercase letter, one uppercase letter, and one number</p>
                     <hr>
                     <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="register-button">Register
                     </button>
