Added our project name to the navbar ; really fixed / redirect this time Fixed header titles

--- a/designapp1/templates/base.html
+++ b/designapp1/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     {% include 'head.html' %}
     {% block head %}
-        <title>Database environment manager</title>
+        <title>Database Administration Bundle</title>
     {% endblock %}
     {% block stylesheets %}
         <link rel="stylesheet" href="/static/css/main.css">
