--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">DBM</a>
+        <a class="navbar-brand" href="/">Database Administration Bundle</a>
         <ul class="navbar-nav mr-auto text-white">
             <div id="whoamiWelcome">
             </div>
         </ul>
-        <div class="my-2 my-lg-0" id="whoamiButton">
-
-        </div>
+{#        <div class="my-2 my-lg-0" id="whoamiButton">#}
+{##}
+{#        </div>#}
         <div class="my-2 mx-2 my-lg-0">
             <form action='/logout' method='POST'><button class="btn btn-secondary my-2 my-sm-0" type='submit' value='logout'>Log out</button></form>
         </div>
