student view styling is now ok

--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -12,26 +12,22 @@
 
     {% include 'navbar.html' %}
     <div class="container-fluid py-3 py-md-5">
-        <div class="row px-0 px-md-5">
+        <div class="row px-0 px-md-5 center-block flex-row">
             <div class="col-12 col-md-4">
                 <div class=" center-block
-    container border border-dark rounded-lg shadow-lg bg-white">
-                    <div class="p-5 text-center">
+    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
                         <!-- Website title -->
-                        <div class="mx-5 text-center">
                             <h1>Student homepage</h1>
-                        </div>
                         <hr/>
                         <div class="overflow-auto" style="height: 300px;">
                             <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
                         </div>
 
-                    </div>
                 </div>
             </div>
-            <div class="col-12 col-md-8">
+            <div class="col-12 col-md-8 mt-3 mt-md-0">
                 <div class=" center-block
-    container border border-dark rounded-lg shadow-lg bg-white">
+    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
 
                     <div class="tab-content" id="courses-content"></div>
                 </div>
