made "please select a course" the default view

--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -17,7 +17,7 @@
                 <div class=" center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
                         <!-- Website title -->
-                            <h1>Student homepage</h1>
+                            <h2>Course list</h2>
                         <hr/>
                         <div class="overflow-auto" style="height: 300px;">
                             <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
@@ -25,11 +25,13 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-8 mt-3 mt-md-0">
-                <div class=" center-block
+            <div class="col-12 col-md-8 mt-3 mt-md-0 d-flex">
+                <div class="center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
 
-                    <div class="tab-content" id="courses-content"></div>
+                    <div class="tab-content" id="courses-content">
+                        <div class="tab-pane active m-5"><h1>Please select a course</h1></div>
+                    </div>
                 </div>
             </div>
         </div>
